# vision-x

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: io.rs
images/test/: README.md
src/: core.rs  errors.rs  extensions.rs  image.rs  io.rs  lib.rs  utils.rs
src/image/: mod.rs  read.rs
src/imgproc/: color.rs  frame.rs  mod.rs
