[package]
name = "vision-x"
version = "1.0.0"
authors = ["Abhishek Sriram <abhishek._.sriram@outlook.com>"]
edition = "2021"
rust-version = "1.79.0"
description = "A lite version of Image processing library for enthusiast and researchers"

documentation = "/#"
readme = "README.md"
homepage = "/#"
repository = "https://github.com/noobsiecoder/vision-x"
license = "MIT"

keywords = ["image", "image-processing", "computer-vision"]
categories = ["computer-vision"]
exclude = ["/benchmark", "/docs", "/images", "/www"]

[dependencies]
# no dependencies added yet